additional 3rd coral auto to test

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -4,7 +4,8 @@
   "holonomicMode": true,
   "pathFolders": [
     "Blue Left Coral",
-    "Blue Right Coral"
+    "Blue Right Coral",
+    "Blue Right Coral 3"
   ],
   "autoFolders": [],
   "defaultMaxVel": 4.0,
