auto coral 2 and 3 working

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -10,28 +10,28 @@
   "autoFolders": [
     "BlueRightCoral3"
   ],
-  "defaultMaxVel": 4.0,
-  "defaultMaxAccel": 4.0,
+  "defaultMaxVel": 4.5,
+  "defaultMaxAccel": 4.5,
   "defaultMaxAngVel": 700.0,
   "defaultMaxAngAccel": 720.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 52.0,
+  "robotMass": 56.699,
   "robotMOI": 8.0,
   "robotTrackwidth": 0.546,
-  "driveWheelRadius": 0.051,
-  "driveGearing": 5.9,
-  "maxDriveSpeed": 5.39,
+  "driveWheelRadius": 0.04784344,
+  "driveGearing": 6.75,
+  "maxDriveSpeed": 4.57,
   "driveMotorType": "krakenX60FOC",
   "driveCurrentLimit": 80.0,
   "wheelCOF": 1.0,
-  "flModuleX": 0.273,
-  "flModuleY": 0.273,
-  "frModuleX": 0.273,
-  "frModuleY": -0.273,
-  "blModuleX": -0.273,
-  "blModuleY": 0.273,
-  "brModuleX": -0.273,
-  "brModuleY": -0.273,
+  "flModuleX": 0.314325,
+  "flModuleY": 0.314325,
+  "frModuleX": 0.314325,
+  "frModuleY": -0.314325,
+  "blModuleX": -0.314325,
+  "blModuleY": 0.314325,
+  "brModuleX": -0.314325,
+  "brModuleY": -0.314325,
   "bumperOffsetX": 0.0,
   "bumperOffsetY": 0.0,
   "robotFeatures": []
