--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -5,7 +5,8 @@
   "pathFolders": [
     "Blue Left Coral",
     "Blue Right Coral",
-    "Blue Right Coral 3"
+    "Blue Right Coral 3",
+    "Blue Left Coral 3"
   ],
   "autoFolders": [
     "BlueRightCoral3"
